# MixVegetable

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/skyinu/jvmti/wrapper/: AppApplication.kt  AppEventListenerImpl.kt  EventCenter.java  LogUtil.kt  MainActivity.kt  SecondActivity.kt
app/src/main/java/com/skyinu/jvmti/wrapper/fragment/: TextFragment.kt
app/src/main/res/layout/: activity_main.xml  activity_second.xml  dialog_main.xml  fragment_text.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
libfork/: build.gradle
libfork/src/main/cpp/: nativelib.cpp
libjvmti/: build.gradle
libjvmti/src/main/: AndroidManifest.xml
libjvmti/src/main/cpp/: CMakeLists.txt  com_skyinu_jvmti_libwrapper_NativeBridge.h  jvmti-wrapper.c
libjvmti/src/main/cpp/appbridge/: app_bridge.h  java_bridge.c  java_bridge.h  node.c
libjvmti/src/main/cpp/applog/: CMakeLists.txt  app_log.c  app_log_config.h.in
libjvmti/src/main/java/com/skyinu/jvmti/libwrapper/: AgentUtil.kt  ApplicationEventListener.kt  NativeBridge.java
libjvmti/src/main/res/values/: strings.xml
libwrapper/: build.gradle
libwrapper/src/main/cpp/: CMakeLists.txt  jvmti-wrapper.c  jvmti-wrapper.h
libwrapper/src/main/cpp/appbridge/: CMakeLists.txt  app_bridge.c  app_bridge.h  java_bridge.c  java_bridge.h  node.c  node.h
libwrapper/src/main/cpp/applog/: CMakeLists.txt  app_log.h
libwrapper/src/main/java/com/skyinu/jvmti/libwrapper/: AgentUtil.kt  NativeTiBridge.java  NativeTiBridge.kt
